USAGOV-1857-wizard-fieldset-background-fix: Add styling to <fieldset> elements in wizard to ensure the background color stretches full length on select or hover.

--- a/web/themes/custom/usagov/sass/_wizard.scss
+++ b/web/themes/custom/usagov/sass/_wizard.scss
@@ -50,9 +50,11 @@
 
     fieldset {
       all: unset;
+      display: block;
+      width: 100%;
 
       // Disable this to prevent shift+click selection of multiple radios.
-      user-select: none; /* Standard syntax */
+      user-select: none;
     }
 
     .field--name-field-intro {
